--- a/HarjKirjanpito/tyylitiedostot/linkkilistaTyyli.css
+++ b/HarjKirjanpito/tyylitiedostot/linkkilistaTyyli.css
@@ -20,6 +20,12 @@ body {
     margin-left:50px;
 
 }
+.tesf{
+    width: 420px;
+    padding:10px;
+    border:3px solid gray;
+    margin:0px;
+}
 
 header {
     background-color:#D1D5B7 ;
@@ -29,6 +35,7 @@ header {
     margin-left:0px;
     margin-top: 25px;
 }
+
 
 footer {
     background-color:#D1D5B7 ;
