--- a/HarjKirjanpito/tyylitiedostot/linkkilistaTyyli.css
+++ b/HarjKirjanpito/tyylitiedostot/linkkilistaTyyli.css
@@ -18,6 +18,7 @@ body {
     /*margin-bottom:100px;*/
     margin-right:50px;
     margin-left:50px;
+    
 
 }
 .kirjautuminenfieldset{
@@ -29,7 +30,7 @@ body {
 
 #salasana{
     position: relative;
-    left: 45px;
+    left: 46px;
 }
 
 header {
@@ -39,6 +40,7 @@ header {
     margin-right:50px;
     margin-left:0px;
     margin-top: 25px;
+    box-shadow: inset 0px 3px 8px rgba(0,0,0,0.126);
 }
 
 
@@ -47,7 +49,7 @@ footer {
     margin-top:70px;
     margin-right:50px;
     margin-left:0px;
-
+    box-shadow: inset 0px 3px 8px rgba(0,0,0,0.126);
 }
 
 .otsikko {
@@ -65,6 +67,7 @@ fieldset {
     padding:10px;
     border:3px solid gray;
     margin:0px;
+
 }
 
 textarea {
@@ -108,6 +111,7 @@ a:visited {
     padding:0;
     margin-left: 50px;
     margin-top: 23px;
+
 }
 #navbar li 
 {
@@ -145,5 +149,6 @@ a:visited {
     margin: 0;
     padding: 0;
     background-color: #D1D5B7; 
+    box-shadow: inset 0px 3px 8px rgba(0,0,0,0.126);
 }
 
