--- a/HarjKirjanpito/tyylitiedostot/tyylit.css
+++ b/HarjKirjanpito/tyylitiedostot/tyylit.css
@@ -3,7 +3,8 @@
     Created on : 11.4.2013, 14:00:22
     Author     : Eveliina Pakarinen
     Description:
-        Tyylitiedosto harjoituskirjanpitojarjestelman sivuille.
+        Tyylitiedosto harjoituskirjanpitojarjestelman sivuille. 
+        Tiedostossa määritellään tarvittavat elementit sivun ulkoasua varten.
 */
 
 root { 
@@ -19,8 +20,8 @@ body {
     margin-right:50px;
     margin-left:50px;
     
-
 }
+
 .kirjautuminenfieldset{
     width: 420px;
     padding:10px;
@@ -29,8 +30,23 @@ body {
 }
 
 #salasana{
-    position: relative;
-    left: 46px;
+    float: right;
+    margin: 4px;
+}
+
+#kayttajatunnus{
+    float: right;
+    margin: 4px;
+}
+
+.kirj{
+    float:left;
+    margin: 4px;
+}
+
+.kirjnappula{
+    float: left;
+    margin: 7px;
 }
 
 header {
@@ -42,7 +58,6 @@ header {
     margin-top: 25px;
     box-shadow: inset 0px 3px 8px rgba(0,0,0,0.126);
 }
-
 
 footer {
     background-color:#D1D5B7 ;
@@ -56,7 +71,6 @@ footer {
     text-decoration: overline;
     margin-left: 45px;
 }
-
 
 div {
     margin-left: 45px;
@@ -113,6 +127,7 @@ a:visited {
     margin-top: 23px;
 
 }
+
 #navbar li 
 {
     list-style: none;
@@ -121,6 +136,7 @@ a:visited {
 
     /*background-color:#D1D5B7;*/
 }
+
 #navbar li a {
     display: block;
     text-align:center;
@@ -129,6 +145,7 @@ a:visited {
     text-decoration: none; 
     color: #000;
     font-weight: bold; }
+
 #navbar li a:hover {
     /*color: #999;*/
     background-color:#98bf21;
@@ -137,10 +154,12 @@ a:visited {
 #navbar li a.valittu {
     color:#999 ;
 }
+
 #navbar li ul {
     display: none;
     list-style-type:none;
 }
+
 #navbar li:hover ul, #navbar li.hover ul {
     position: absolute;
     display:list-item;
