--- a/HarjKirjanpito/tyylitiedostot/tyylit.css
+++ b/HarjKirjanpito/tyylitiedostot/tyylit.css
@@ -28,7 +28,7 @@ body {
     border:3px solid gray;
     margin:0px;
 }
-
+/*
 #salasana{
     float: right;
     margin: 4px;
@@ -47,7 +47,7 @@ body {
 .kirjnappula{
     float: left;
     margin: 7px;
-}
+}*/
 
 header {
     background-color:#D1D5B7 ;
